Fix small styling error

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
             </div>
             <button id="gameStarterStartButton" class="arrow-btn small" aria-label="Start game">START NOW 💀</button>
             <p class="color-gray smaller">
-                We don't recommend a size greater than 9⁴ (9^4) as your browser may not be able to handle it.
+                We don't recommend a size greater than 9⁴ (9^4)
+                <br>as your browser may not be able to handle it.
             </p>
         </section>
 
