--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
                 <br>as your browser may not be able to handle it.
             </p>
         </section>
+        
+        <div class="space-break" data-height="4"></div>
+        <div class="space-break dots" data-height="2"></div>
+
+        <div class="center">
+            <div class="color-darker-gray smaller">
+                This project has been used to submit to the High Seas Hack Club 2025.
+            </div>
+        </div>
+
+        
+        <div class="space-break" data-height="3"></div>
 
         <!-- Footer Section -->
         <footer>
